--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,34 @@
-body{
-    font-family: 'Poppins', sans-serif; 
+body {
+    font-family: 'Poppins', sans-serif;
+    margin: 0px;
+
 }
 
-h1{
+h1 {
     font-size: 35px;
 }
-.name-highlight{
+
+.name-highlight {
     color: orange;
 }
-.half-width{
+
+.half-width {
     width: 40%;
     float: left;
     margin-left: 5%;
 }
-.half-width img{
+
+.half-width img {
     width: 100%;
-    
+
+}
+
+.top-banner {
+    background-image: url("/images/top-banner.png");
+    background-repeat: no-repeat;
+
+}
+
+section {
+    height: 500px;
 }
