--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,14 @@ h1 {
     font-size: 35px;
 }
 
+h2 {
+    font size: 40px;
+}
+
+p {
+    color: dimgray;
+}
+
 .name-highlight {
     color: orange;
 }
@@ -31,4 +39,19 @@ h1 {
 
 section {
     height: 500px;
+    padding-bottom: 50px;
+}
+
+.link-button {
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+}
+.dream-area{
+    background-image: url(/images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
