--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,22 @@ body {
 
 h1 {
     font-size: 35px;
+    
 }
 
 h2 {
-    font size: 40px;
+    font-size: 30px;
+    
 }
+
 
 p {
     color: dimgray;
+   
+    
 }
 
-.name-highlight {
+.orange-highlight{
     color: orange;
 }
 
@@ -54,4 +59,33 @@ section {
     background-image: url(/images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 15px;
+    height: 60%;
+    background-color: white;
+    
+}
+.experience-area{
+    
+    background-image: url("/images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato); 
+    border-image-slice:1 ;
+    
+    
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan); 
+    border-image-slice: 1 ;
+}
+footer p{
+    text-align: center;
+    font-size: 12px;
 }
